Fix confirm button visibility

--- a/khb2026/css/color.css
+++ b/khb2026/css/color.css
@@ -2,6 +2,7 @@
 :root {
     --grey: #333;
     --white: #fff;
+    --black: #111;
     --accent: #7fdcff;
     --deepaccent: #00b8f4;
     --pastelaccent: #bfeaff;
